feat: demo input flow and remove recruiter wording

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -214,7 +214,6 @@
     "standoutFactors": "عوامل التميز",
     "skillsRadar": "رادار المهارات",
     "techStack": "المكدس التقني",
-    "recruiterSummary": "الملخص التنفيذي",
     "loading": "جارٍ تحليل الملف...",
     "error": "حدث خطأ أثناء إنشاء الرؤى. حاول مرة أخرى.",
     "scoreNote": {
@@ -228,21 +227,22 @@
       "industrial": "الصناعي",
       "softSkills": "المهارات الناعمة",
       "languages": "اللغات"
-    }
+    },
+    "executiveSummary": "?????? ????????"
   },
   "resumeAnalyzer": {
     "title": "محلل السيرة الذاتية",
-    "subtitle": "???? ??? ???? ?????? ???? ??????????? ???? ?????? ???????.",
-    "analyze": "????? ???? ???????????",
+    "subtitle": "???? ???? ??? ???? ????? ?? ??? ?????? ???????.",
+    "analyze": "????? ???? ???? ?????",
     "reanalyze": "????? ????? ??????",
     "loading": "جارٍ تحليل السيرة الذاتية...",
     "completeness": "??? ????? ??????",
-    "atsScore": "?????? ???????",
+    "atsScore": "???? ????????",
     "sections": "???? ??? ???? ?????",
-    "gaps": "???? ?????? ???????????",
+    "gaps": "???? ??????",
     "strengths": "نقاط القوة",
     "improvements": "????????? ??????",
-    "overall": "???? ???????????",
+    "overall": "?????? ????????",
     "error": "حدث خطأ أثناء تحليل السيرة الذاتية. حاول مرة أخرى.",
     "sectionNames": {
       "personal": "المعلومات الشخصية",
@@ -277,7 +277,7 @@
     "badge": "??? ???",
     "titlePrefix": "جرّب",
     "titleBrand": "Vitae.ai",
-    "description": "???? ????? ??????? ?????? ??? ?????? ?????? (????? 60%). ??? ??? ????? ?????? ??????? ?????? ????????? ?????? ??????? ??? ????? Vitae.ai.",
+    "description": "???? ????? ??????? ?????? ??? ?????? ?????? (????? 60%). ??? ??? ????? ?????? ??????? ?????? ????????? ??? ????? Vitae.ai.",
     "cardTitle": "أدخل معلوماتك",
     "cardSubtitle": "اختر طريقة تزويد بيانات سيرتك الذاتية",
     "tabs": {
@@ -411,7 +411,7 @@
       },
       "cta": {
         "title": "???? ??????? ???????",
-        "description": "???? Vitae.ai ?????? ??? ?????? ??????? ??????? ?????? ????????? ???????? ?????? ???????????.",
+        "description": "???? Vitae.ai ?????? ??? ?????? ??????? ??????? ?????? ?????????.",
         "install": "????? Vitae.ai",
         "guide": "???? ???????"
       },
