--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -214,7 +214,6 @@
     "standoutFactors": "विशिष्ट कारक",
     "skillsRadar": "कौशल रडार",
     "techStack": "टेक स्टैक",
-    "recruiterSummary": "कार्यकारी सारांश",
     "loading": "प्रोफ़ाइल का विश्लेषण हो रहा है...",
     "error": "इनसाइट्स बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "scoreNote": {
@@ -228,21 +227,22 @@
       "industrial": "इंडस्ट्रियल",
       "softSkills": "सॉफ्ट स्किल्स",
       "languages": "भाषाएं"
-    }
+    },
+    "executiveSummary": "????????????? ??????"
   },
   "resumeAnalyzer": {
     "title": "CV विश्लेषक",
-    "subtitle": "?? CV ?? ?????-??????, ????????? ???????",
-    "analyze": "???????? ?????? ?????",
+    "subtitle": "?? CV ?? ?????? ?? ???????? ???????",
+    "analyze": "?????? ?? ?????? ?????",
     "reanalyze": "?????? ??? ?? ?????",
     "loading": "CV का विश्लेषण हो रहा है...",
     "completeness": "????????? ?? ??????",
-    "atsScore": "???????? ???????",
+    "atsScore": "?????? ?????",
     "sections": "????? ?????? ?? ??????",
-    "gaps": "???????? ?????????",
+    "gaps": "?????????",
     "strengths": "ताकतें",
     "improvements": "?????? ????????????",
-    "overall": "???????? ??????",
+    "overall": "????????????? ??????",
     "error": "CV विश्लेषण में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "sectionNames": {
       "personal": "व्यक्तिगत जानकारी",
@@ -277,7 +277,7 @@
     "badge": "?????? ????",
     "titlePrefix": "आज़माएँ",
     "titleBrand": "Vitae.ai",
-    "description": "???? CV ????? ???? ?? ???? 60% ?? ????? ???????? ????? ???? ???????????, AI ???????? ?? ???????? ????? Vitae.ai ??????? ???? ?? ????? ??????",
+    "description": "???? CV ????? ???? ?? ???? 60% ?? ????? ???????? ????? ???? ??????????? ?? AI ???????? Vitae.ai ??????? ???? ?? ????? ??????",
     "cardTitle": "अपनी जानकारी दर्ज करें",
     "cardSubtitle": "अपना CV डेटा देने का तरीका चुनें",
     "tabs": {
@@ -411,7 +411,7 @@
       },
       "cta": {
         "title": "???? ????? ????? ????",
-        "description": "Vitae.ai ??????? ???? ???? ???? CV, AI ???????? ?? ????????-?????? ???????? ??? ????",
+        "description": "Vitae.ai ??????? ???? ???? ???? CV ?? AI ???????? ??? ?????",
         "install": "Vitae.ai ??????? ????",
         "guide": "????? ????"
       },
