--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -214,7 +214,6 @@
     "standoutFactors": "際立つ要素",
     "skillsRadar": "スキルレーダー",
     "techStack": "技術スタック",
-    "recruiterSummary": "エグゼクティブサマリー",
     "loading": "プロフィールを分析中...",
     "error": "インサイトの生成に失敗しました。もう一度お試しください。",
     "scoreNote": {
@@ -228,21 +227,22 @@
       "industrial": "産業",
       "softSkills": "ソフトスキル",
       "languages": "言語"
-    }
+    },
+    "executiveSummary": "???????????"
   },
   "resumeAnalyzer": {
     "title": "履歴書アナライザー",
-    "subtitle": "???????????????????????",
-    "analyze": "?????????",
+    "subtitle": "??CV?????????????",
+    "analyze": "????????",
     "reanalyze": "??????",
     "loading": "履歴書を分析中...",
     "completeness": "?????????",
-    "atsScore": "??????????",
+    "atsScore": "?????",
     "sections": "?????",
-    "gaps": "????????????",
+    "gaps": "?????",
     "strengths": "強み",
     "improvements": "??????????",
-    "overall": "?????????",
+    "overall": "???????????",
     "error": "履歴書の分析に失敗しました。もう一度お試しください。",
     "sectionNames": {
       "personal": "個人情報",
@@ -277,7 +277,7 @@
     "badge": "????",
     "titlePrefix": "試してみる",
     "titleBrand": "Vitae.ai",
-    "description": "??????????????60%???????????????????????????AI?????????????????Vitae.ai?????????????????",
+    "description": "?????????????60%???????????????????????????AI??????Vitae.ai?????????????????",
     "cardTitle": "情報を入力",
     "cardSubtitle": "履歴書データの提供方法を選択してください",
     "tabs": {
@@ -411,7 +411,7 @@
       },
       "cta": {
         "title": "??????",
-        "description": "Vitae.ai??????????????CV?AI???????????????????????",
+        "description": "Vitae.ai?????????????CV?AI???????????????",
         "install": "Vitae.ai???????",
         "guide": "?????????"
       },
