--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -214,7 +214,6 @@
     "standoutFactors": "차별화 요소",
     "skillsRadar": "스킬 레이더",
     "techStack": "기술 스택",
-    "recruiterSummary": "이그제큐티브 서머리",
     "loading": "프로필 분석 중...",
     "error": "인사이트 생성 중 오류가 발생했습니다. 다시 시도하세요.",
     "scoreNote": {
@@ -228,21 +227,22 @@
       "industrial": "산업",
       "softSkills": "소프트 스킬",
       "languages": "언어"
-    }
+    },
+    "executiveSummary": "?????? ???"
   },
   "resumeAnalyzer": {
     "title": "이력서 분석기",
-    "subtitle": "?? ???? ?? ???? ??? ?????.",
+    "subtitle": "? CV? ??? ???? ?????.",
     "analyze": "?? ?? ??",
     "reanalyze": "?? ???",
     "loading": "이력서 분석 중...",
     "completeness": "??? ??",
-    "atsScore": "?? ???",
+    "atsScore": "?? ??",
     "sections": "?? ??",
-    "gaps": "?? ?????",
+    "gaps": "?????",
     "strengths": "강점",
     "improvements": "?? ?? ???",
-    "overall": "?? ??",
+    "overall": "?????? ???",
     "error": "이력서 분석 중 오류가 발생했습니다. 다시 시도하세요.",
     "sectionNames": {
       "personal": "개인 정보",
@@ -277,7 +277,7 @@
     "badge": "?? ??",
     "titlePrefix": "체험하기",
     "titleBrand": "Vitae.ai",
-    "description": "CV? ???? ? 60%? ??? ????? ?????. ?? ?????, AI ????, ?? ??? ??? Vitae.ai ?? ? ??? ? ????.",
+    "description": "CV? ???? ? 60%? ??? ????? ?????. ?? ?????? AI ????? Vitae.ai ?? ? ??? ? ????.",
     "cardTitle": "정보를 입력하세요",
     "cardSubtitle": "CV 데이터를 제공하는 방법을 선택하세요",
     "tabs": {
@@ -411,7 +411,7 @@
       },
       "cta": {
         "title": "?? ?? ?? ??",
-        "description": "Vitae.ai? ???? ?? CV, AI ????, ?? ???? ??? ??? ? ????.",
+        "description": "Vitae.ai? ???? ?? CV? AI ????? ?????.",
         "install": "Vitae.ai ??",
         "guide": "?? ???"
       },
