--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -214,7 +214,6 @@
     "standoutFactors": "突出因素",
     "skillsRadar": "技能雷达",
     "techStack": "技术栈",
-    "recruiterSummary": "执行摘要",
     "loading": "正在分析档案...",
     "error": "生成洞察时出错。请重试。",
     "scoreNote": {
@@ -228,18 +227,19 @@
       "industrial": "工业",
       "softSkills": "软技能",
       "languages": "语言"
-    }
+    },
+    "executiveSummary": "????"
   },
   "resumeAnalyzer": {
     "title": "简历分析",
-    "subtitle": "????????????????",
+    "subtitle": "???????????",
     "analyze": "??????",
     "reanalyze": "??????",
     "loading": "正在分析简历...",
     "completeness": "????",
     "atsScore": "?????",
     "sections": "????",
-    "gaps": "????",
+    "gaps": "??",
     "strengths": "优势",
     "improvements": "?????",
     "overall": "????",
@@ -277,7 +277,7 @@
     "badge": "????",
     "titlePrefix": "体验",
     "titleBrand": "Vitae.ai",
-    "description": "?????????? 60% ????????????AI ??????????? Vitae.ai ?????",
+    "description": "?????????? 60% ???????????? AI ?????? Vitae.ai ?????",
     "cardTitle": "填写你的信息",
     "cardSubtitle": "选择你提供简历数据的方式",
     "tabs": {
@@ -411,7 +411,7 @@
       },
       "cta": {
         "title": "??????",
-        "description": "?? Vitae.ai ?????????AI ???????????",
+        "description": "?? Vitae.ai ????????? AI ???",
         "install": "?? Vitae.ai",
         "guide": "????"
       },
